service_cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-static
  namespace: my-project   # Новый namespace
spec:
  type: ClusterIP
  selector:
    app: deployment-nginx-static
  ports:
  - protocol: TCP
    port: 80            # Сервисный порт
    targetPort: 80       # Порт контейнера
