my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: my-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app.kassaev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-nginx-static
                port:
                  number: 80
